# Visual-linker

./: CMakeLists.txt  README.md  main.cpp
doc/: linker script.md  linker(一).md
script/: analyze_map.py  panserver.py  section.sh
src/: cmd.h  cmdline.h  depinput.h  depinput64.cpp  elf_parser.cpp  elf_parser.h  elf_parser.hpp  file.cpp  file.h  main.cpp  markdown.cpp  markdown.h  relocation.cpp  relocation.h  section.cpp  section.h  sole.hpp  symbol.cpp  symbol.h  symtab.cpp  symtab.h
src/script/: loablib.lua
src/utils/: command.cpp  strings.cpp
test/: 1.md  Visual-linker  a.out  ab  analyze_map.py  b.c  defalut.lds  hex.cpp  section.cpp  section.h  section.sh  sy.md  tabulate.cpp  test.lds  test.map  test.md  test.py  uuid.cpp  visual.md
utils/: command.cpp  easylogging++.cpp  easylogging++.h  strings.cpp
